docs: 調整專案規劃 v1 的圖片路徑

--- a/docs/v1.0 專案規劃.md
+++ b/docs/v1.0 專案規劃.md
@@ -11,21 +11,21 @@
     * 條列式呈現文章標題
     * 點擊文章標題，將文章 id 存入 coookie，前往 /articles/article.html
     * 新增文章按鈕，前往 /articles/create.html
-    * 畫面參考: ![articles-v1](/repo/articles-v1.png)
+    * 畫面參考: ![articles-v1](/repo/v1/articles.png)
 * article.html: 
     * 呈現單篇文章，作為之後串接後端數據的模板
     * 讀取 coookie，取得文章 id，透過 JS 渲染畫面
     * 呈現標題、作者名、內文
     * 編輯按鈕，點擊後前往 /articles/edit.html
-    * 畫面參考: ![article-v1](/repo/article-v1.png)
+    * 畫面參考: ![article-v1](/repo/v1/article.png)
 * create.html:     
     * 新增文章，可填入標題、作者名、內文，目前僅限文字
-    * 畫面參考: ![create-article-v1](/repo/create-article-v1.png)
+    * 畫面參考: ![create-article-v1](/repo/v1/create-article.png)
 * edit.html:     
     * 修改單篇文章
     * 讀取 coookie，取得文章 id，透過 JS 渲染畫面
     * 欄位檢查，若有缺少或錯誤需要提醒
-    * 畫面參考: ![update-article-v1](/repo/update-article-v1.png)
+    * 畫面參考: ![update-article-v1](/repo/v1/update-article.png)
 
 ## 2. 後端數據準備
 * 數據先儲存在本地
