docs: 更新第二版 API 文件

--- a/docs/v2.0 專案規劃.md
+++ b/docs/v2.0 專案規劃.md
@@ -10,6 +10,19 @@
 6. 無限下滑 (index.html)
 7. 分類 tag (預設: 無分類) (create.html / edit.html)
 
+備註：
+1. 請求發生錯誤後，回應格式如下：
+
+```json
+{
+    "code": 3,
+    "msg": "xxx",
+}
+```
+
+code 為錯誤代碼, msg 為錯誤資訊，提供給開發人員看的，不要直接給使用者，應該根據錯誤代碼生成前端的錯誤資訊。
+2. 只有自己的文章可以編輯
+
 ## register.html
 
 * 名稱(Name)、信箱(Email)、密碼(Password)與密碼確認(Confirm password)都是必須的
