--- a/docs/各頁面任務說明.md
+++ b/docs/各頁面任務說明.md
@@ -4,11 +4,14 @@
 
 ### 導入用戶機制前
 
-* 呈現所有文章列表，每一篇呈現作者名稱、文章標題，以及文章概要。
-* 最上方(Header 下面)有搜尋欄，可輸入關鍵字，點擊搜尋欄旁邊的按鈕後，送出請求，根據返回內容重新渲染下方的文章列表。
-* 點擊文章區塊後，跳往單篇文章頁。
-* 文章列表透過無線下滑機制，每次向後端索取 N 篇文章，再動態渲染進去。
-* 搜尋按鈕右邊是新增文章紐，點擊後前往 Create 頁面
+* 建立畫面，呈現所有文章列表。
+   * 一次性渲染後端傳來的所有數據。
+   * 每一個文章區塊呈現作者名稱、文章標題，以及文章概要。
+   * 點擊文章區塊後，跳往單篇文章頁。
+   * 最上方(Header 下面)有搜尋欄，可輸入關鍵字，點擊搜尋欄旁邊的按鈕後，送出請求，根據返回內容重新渲染下方的文章列表。   
+   * 搜尋按鈕右邊是新增文章紐，點擊後前往 Create 頁面。
+ 
+* 文章列表改為使用無線下滑機制，每次向後端索取 N 篇文章，再動態渲染進去。
 
 ### 導入用戶機制後
 
@@ -18,21 +21,32 @@
 
 ### 導入用戶機制前
 
-* 呈現單篇文章，文章標題、作者名、文章分類置中呈現，再下方才是文章內文。
-* 文章下方是留言區，點擊到留言區時，留言區高度會略為放大，點到其他地方、按取消按鈕或是按留言按鈕，則會恢復原始大小。
-* 留言區當中有文字時，按取消按鈕或是按留言按鈕後，文字會清空。
-* 文章內文的容器和螢幕的最兩邊會有一段空白，不會直接貼著邊邊呈現。
-* 取消按鈕和按留言按鈕並列，位於留言區的右下方。
-* 留言區左上的用戶名稱和用戶頭像先使用寫死的數據
-* 留言區下方是歷史留言區，越上方會是越新的留言，最新的留言會被加到最上面
+* 建立畫面，呈現單篇文章，文章標題、作者名、文章分類置中呈現，再下方才是文章內文。
+   * 文章內文的容器和螢幕的最兩邊會有一段空白，不會直接貼著邊邊呈現。
+
+* 新增畫面，文章下方是留言區
+   * 點擊到留言區時，留言區高度會略為放大，點到其他地方、按取消按鈕或是按留言按鈕，則會恢復原始大小。
+   * 留言區當中有文字時，按取消按鈕或是按留言按鈕後，文字會清空。
+   * 取消按鈕和按留言按鈕並列，位於留言區的右下方。
+   * 留言區左上的用戶名稱和用戶頭像先使用寫死的數據
+
+* 新增畫面，留言區下方是歷史留言區
+   * 越上方會是越新的留言，最新的留言會被加到最上面
+   * 若有多則留言，一次性渲染全部
+   * 歷史留言區的每則留言的格式與留言區類似，包含用戶名稱、用戶頭像和留言的內文。
+ 
 * 若有多則留言，則會每次向後端索取 N 則留言，這些留言的最下方再提供"更多留言"的按鈕，按下後再索取 N 則留言，若沒有更多留言了，則"更多留言"的按鈕隱藏
-* 歷史留言區的每則留言的格式與留言區類似，包含用戶名稱、用戶頭像和留言的內文。
 
 ### 導入用戶機制後
 
-* 如果當前用戶是文章的作者，則文章內文的右下方會有編輯按鈕，再下去才是留言區。
+* 新增畫面，如果當前用戶是文章的作者，則文章內文的右下方會有編輯按鈕，再下去才是留言區。
+   * 編輯按鈕按下後，跳往 Edit
+     
 * 串接新增留言 API
-* 串接讀取歷史留言 API
+   * 用戶名稱和用戶頭像使用 cookie 當中的用戶數據
+
+* 串接讀取歷史留言 API   
+   * 用戶名稱和用戶頭像使用回應當中的用戶數據
 
 ## Edit
 
@@ -59,41 +73,51 @@
 
 ### 導入用戶機制前
 
-* 新增文章，可新增文章的標題、分類和內文，其中標題和內文為文字輸入框，分類為下拉選單。
-* 文章分類預設為無分類，其他欄位則必填。
+* 建立畫面，新增文章
+   * 標題、作者名稱為單行文字輸入框。
+   * 內文為多行文字輸入框。
+   * 分類為下拉選單。
+   * 文章分類預設為無分類，其他欄位則必填。
+   * 右下為取消和新增
+   * 取消紐按下後，返回文章列表頁
+   * 新增紐按下後，送出新增 API
 
 ### 導入用戶機制後
+
+* 修改畫面，以及更新 API 參數
+   * Header 中帶入 JWT
 
 ---
 ---
 
 ## Register
 
-* 向後端註冊新帳號
-* 輸入框: name, email, password, password 確認，其中 email 不可與他人重複，且所有欄位不可為空
-* 要求輸入兩次 password，確保輸入內容正確
-* 點擊註冊按鈕才會送出請求
-* 註冊按鈕下方會有超連結，給已經有帳號的人跳往 Login 頁面
+* 建立畫面，向後端註冊新帳號
+   * 輸入框: name, email, password, password 確認，其中 email 不可與他人重複，且所有欄位不可為空
+   * 點擊註冊按鈕才會送出請求
+   * 註冊按鈕下方會有超連結，給已經有帳號的人跳往 Login 頁面
+   * 串接註冊 API
 
 ## Login
 
-* 使用 email 和 password，向後端請求登入，並獲取驗證身分用的 JWT
-* 輸入框: email, password，其中所有欄位不可為空
-* 點擊登入按鈕才會送出請求
-* 登入按鈕下方會有超連結，給還沒有帳號的人跳往 Register 頁面
+* 建立畫面，向後端請求登入，並獲取驗證身分用的 JWT
+   * 輸入框: email, password，其中所有欄位不可為空
+   * 點擊登入按鈕才會送出請求
+   * 登入按鈕下方會有超連結，給還沒有帳號的人跳往 Register 頁面
 
 ## Profile
 
-* 呈現用戶 ID、名稱、email 和用戶頭像。其中名稱可編輯，使用 input 標籤呈現；用戶頭像可上傳新圖片。
-* 右下方為取消按鈕和更新按鈕，取消按鈕按下後，email 和用戶頭像重置為原本的內容。
-* 更新按鈕按下後，檢查是否有被修改，如果有則送出請求，沒有的話則不送出請求。
-* 更新後的內容不可為空。
+* 建立畫面，呈現用戶 ID、名稱、email 和用戶頭像。
+   * 名稱可編輯，使用 input 標籤呈現；用戶頭像可上傳新圖片。
+   * 右下方為取消按鈕和更新按鈕，取消按鈕按下後，email 和用戶頭像重置為原本的內容。
+   * 更新按鈕按下後，檢查是否有被修改，如果有則送出請求，沒有的話則不送出請求。
+   * 更新後的內容不可為空。
 
 ## Users
 
-* 呈現除了當前用戶以外的所有用戶，使用無線下滑機制，每次取得 N 名用戶的數據，再動態渲染進去。
-* 左邊呈現用戶頭像和名稱，右邊則為追隨按鈕，切換追隨狀態。
-* 後端返回的用戶列表會呈現已追隨的用戶，再呈現未追隨的用戶。
+* 建立畫面，呈現除了當前用戶以外的所有用戶，使用無線下滑機制，每次取得 N 名用戶的數據，再動態渲染進去。
+   * 左邊呈現用戶頭像和名稱，右邊則為追隨按鈕，切換追隨狀態。
+   * 已追隨的用戶和未追隨的用戶的按鈕文字和顏色上要做出差異。
 
 ## 其他
 
@@ -101,9 +125,10 @@
 
 ### 導入用戶機制前
 
-* 登入後的所有頁面共用相同 Header，包含 Logo, Users 和 Profile
-* Logo 點擊後跳往 Index
-* Users 點擊後跳往 Users
-* Profile 點擊後跳往 Profile
+* 建立畫面，登入後的所有頁面共用相同 Header，左方為 Logo 的圖片
+   * Logo 點擊後跳往 Index
 
 ### 導入用戶機制後
+
+* 修改畫面，位於畫面右方，右邊數來第一個為 Profile，使用用戶個人頭像作為圖片，點擊後跳往 Profile
+* 修改畫面，位於畫面右方，右邊數來第二個為 Users，點擊後跳往 Users
