--- a/docs/各頁面任務說明.md
+++ b/docs/各頁面任務說明.md
@@ -12,17 +12,23 @@
    * 搜尋按鈕右邊是新增文章紐，點擊後前往 Create 頁面。
  
 * 文章列表改為使用無線下滑機制，每次向後端索取 N 篇文章，再動態渲染進去。
+  
+* 取得文章分類列表，並存入 Cookie
 
 ### 導入用戶機制後
 
 * 文章列表的呈現增加作者頭像。
 
+* 從 JWT 中讀取用戶資訊，並存入 Cookie
+  
 ## Article
 
 ### 導入用戶機制前
 
-* 建立畫面，呈現單篇文章，文章標題、作者名、文章分類置中呈現，再下方才是文章內文。
+* 建立畫面，呈現單篇文章，文章標題、作者名置中呈現，再下方才是文章內文。
    * 文章內文的容器和螢幕的最兩邊會有一段空白，不會直接貼著邊邊呈現。
+ 
+* 新增畫面，增加文章分類欄位，於作者名稱下方置中呈現
 
 * 新增畫面，文章下方是留言區
    * 點擊到留言區時，留言區高度會略為放大，點到其他地方、按取消按鈕或是按留言按鈕，則會恢復原始大小。
@@ -59,6 +65,9 @@
     * 右下方為取消按鈕和更新按鈕，取消按鈕按下後，標題、分類和內文重置為原本的內容。
     * 更新按鈕按下後，檢查是否有被修改，且更新後的內容不可為空，如果有則印出文章的所有數據，沒有的話則不印出。
 
+* 新增畫面，使用下拉選單選擇文章分類
+  * API 中帶入文章分類參數
+
 * 串接更新文章 API
     * 原本印出文章的所有數據的部分，改為實際送出請求。
     * 獲得回應後，跳轉到單篇文章頁。
@@ -76,12 +85,14 @@
 * 建立畫面，新增文章
    * 標題、作者名稱為單行文字輸入框。
    * 內文為多行文字輸入框。
-   * 分類為下拉選單。
-   * 文章分類預設為無分類，其他欄位則必填。
    * 右下為取消和新增
    * 取消紐按下後，返回文章列表頁
    * 新增紐按下後，送出新增 API
 
+* 新增畫面，使用下拉選單選擇文章分類
+  * API 中帶入文章分類參數
+  * 文章分類預設為無分類，其他欄位則必填。
+  
 ### 導入用戶機制後
 
 * 修改畫面，以及更新 API 參數
