--- a/docs/各頁面任務說明.md
+++ b/docs/各頁面任務說明.md
@@ -4,22 +4,22 @@
 
 ### 導入用戶機制前
 
-* 建立畫面，呈現所有文章列表。
-   * 一次性渲染後端傳來的所有數據。
-   * 每一個文章區塊呈現作者名稱、文章標題，以及文章概要。
-   * 點擊文章區塊後，跳往單篇文章頁。
-   * 最上方(Header 下面)有搜尋欄，可輸入關鍵字，點擊搜尋欄旁邊的按鈕後，送出請求，根據返回內容重新渲染下方的文章列表。   
-   * 搜尋按鈕右邊是新增文章紐，點擊後前往 Create 頁面。
+* 建立畫面，呈現文章列表。
+  * 每一個文章索引呈現作者名稱、文章標題，以及文章概要。最右方會有一個 READ 按鈕，點下去之後，將文章 ID 存到 Cookie 並跳轉到 Article 頁面
+  * 點擊文章索引後，跳往單篇文章頁。
+  * 最上方(Header 下面)有搜尋欄，可輸入關鍵字，點擊搜尋欄旁邊的按鈕後，送出請求，根據返回內容重新渲染下方的文章列表。
+  * 搜尋按鈕右邊是新增文章紐，點擊後前往 Create 頁面。 
+  * 串接取得文章列表的 API
+  * 一次性渲染後端傳來的所有數據。
+  * 搜尋按鈕發送取得文章列表的請求時，要帶上 keyword 這個 query 參數
  
-* 文章列表改為使用無線下滑機制，每次向後端索取 N 篇文章，再動態渲染進去。
+* 文章列表改為使用無線下滑機制，每次向後端索取 N 篇文章，再動態渲染文章列表。
   
 * 取得文章分類列表，並存入 Cookie
 
 ### 導入用戶機制後
 
 * 文章列表的呈現增加作者頭像。
-
-* 從 JWT 中讀取用戶資訊，並存入 Cookie
   
 ## Article
 
@@ -27,6 +27,8 @@
 
 * 建立畫面，呈現單篇文章，文章標題、作者名置中呈現，再下方才是文章內文。
    * 文章內文的容器和螢幕的最兩邊會有一段空白，不會直接貼著邊邊呈現。
+   * 文章內文的右下方會有編輯按鈕，再下去才是留言區。
+   * 編輯按鈕按下後，跳往 Edit
  
 * 新增畫面，增加文章分類欄位，於作者名稱下方置中呈現
 
@@ -34,22 +36,27 @@
    * 點擊到留言區時，留言區高度會略為放大，點到其他地方、按取消按鈕或是按留言按鈕，則會恢復原始大小。
    * 留言區當中有文字時，按取消按鈕或是按留言按鈕後，文字會清空。
    * 取消按鈕和按留言按鈕並列，位於留言區的右下方。
-   * 留言區左上的用戶名稱和用戶頭像先使用寫死的數據
+   * API 使用用戶名稱或 ID 來區分留言者，JS 自行設置參數，用戶毋需填寫
+   * 留言區左上的用戶頭像先使用寫死的數據
 
 * 新增畫面，留言區下方是歷史留言區
+   * 後端傳來的數據應該按照時間做排序，因此前端無須再做排序
    * 越上方會是越新的留言，最新的留言會被加到最上面
-   * 若有多則留言，一次性渲染全部
+   * 若有多則歷史留言，一次性渲染全部
    * 歷史留言區的每則留言的格式與留言區類似，包含用戶名稱、用戶頭像和留言的內文。
  
-* 若有多則留言，則會每次向後端索取 N 則留言，這些留言的最下方再提供"更多留言"的按鈕，按下後再索取 N 則留言，若沒有更多留言了，則"更多留言"的按鈕隱藏
+* 新增留言 API，在歷史留言區的畫面完成後，取得 API 回應值後，將最新留言渲染到歷史留言區。
+ 
+* 若有多則歷史留言，則會每次向後端索取 N 則留言，這些留言的最下方再提供"更多留言"的按鈕，按下後再索取 N 則留言，若沒有更多留言了，則"更多留言"的按鈕隱藏。
 
 ### 導入用戶機制後
 
-* 新增畫面，如果當前用戶是文章的作者，則文章內文的右下方會有編輯按鈕，再下去才是留言區。
-   * 編輯按鈕按下後，跳往 Edit
+* 新增畫面，如果當前用戶是文章的作者，則文章內文的右下方才會有編輯按鈕
+   * 如果不是作者，則不會出現編輯按鈕
      
-* 串接新增留言 API
-   * 用戶名稱和用戶頭像使用 cookie 當中的用戶數據
+* 新增留言
+  * 串接 API，留言者身分會從 JWT 中取得，因此無須傳遞用戶 ID 或名稱
+  * 用戶名稱和用戶頭像使用 cookie 當中的用戶數據
 
 * 串接讀取歷史留言 API   
    * 用戶名稱和用戶頭像使用回應當中的用戶數據
@@ -58,19 +65,15 @@
 
 ### 導入用戶機制前
 
-* 建立畫面，說明文字和文字輸入框搭配，渲染當前文章的標題、作者名稱、分類和內文。
+* 建立畫面，說明文字和文字輸入框搭配，渲染當前文章的標題、作者名稱和內文。
     * 標題為單行文字；內文為多行文字。
     * 作者名稱不可修改。
-    * 分類為下拉選單。
-    * 右下方為取消按鈕和更新按鈕，取消按鈕按下後，標題、分類和內文重置為原本的內容。
-    * 更新按鈕按下後，檢查是否有被修改，且更新後的內容不可為空，如果有則印出文章的所有數據，沒有的話則不印出。
+    * 右下方為取消按鈕和更新按鈕，取消按鈕按下後，標題和內文重置為原本的內容。
+    * 更新按鈕按下後，檢查是否有被修改，且更新後的內容不可為空，如果有則送出請求。
+    * 沒有更新或是請求獲得回應後，跳轉到單篇文章頁。
 
 * 新增畫面，使用下拉選單選擇文章分類
   * API 中帶入文章分類參數
-
-* 串接更新文章 API
-    * 原本印出文章的所有數據的部分，改為實際送出請求。
-    * 獲得回應後，跳轉到單篇文章頁。
 
 ### 導入用戶機制後
 
@@ -115,6 +118,8 @@
    * 輸入框: email, password，其中所有欄位不可為空
    * 點擊登入按鈕才會送出請求
    * 登入按鈕下方會有超連結，給還沒有帳號的人跳往 Register 頁面
+   * 將 JWT 存入 Cookie
+   * 從 JWT 中讀取用戶資訊，並存入 Cookie
 
 ## Profile
 
