--- a/docs/各頁面任務說明.md
+++ b/docs/各頁面任務說明.md
@@ -5,17 +5,20 @@
 ### 導入用戶機制前
 
 * 建立畫面，呈現文章列表。
-  * 每一個文章索引呈現作者名稱、文章標題，以及文章概要。最右方會有一個 READ 按鈕，點下去之後，將文章 ID 存到 Cookie 並跳轉到 Article 頁面
+  * 每一個文章索引呈現作者名稱、文章標題，以及文章概要。最右方會有一個 READ 按鈕
   * 點擊文章索引後，跳往單篇文章頁。
-  * 最上方(Header 下面)有搜尋欄，可輸入關鍵字，點擊搜尋欄旁邊的按鈕後，送出請求，根據返回內容重新渲染下方的文章列表。
+  * 最上方(Header 下面)有搜尋欄，可輸入關鍵字，旁邊為搜尋按鈕。
   * 搜尋按鈕右邊是新增文章紐，點擊後前往 Create 頁面。 
-  * 串接取得文章列表的 API
-  * 一次性渲染後端傳來的所有數據。
+
+* 串接文章列表 API
+  * READ 按鈕，點下去之後，將文章 ID 存到 Cookie 並跳轉到 Article 頁面
+  * 搜尋欄旁邊的按鈕後，送出請求，根據返回內容重新渲染下方的文章列表。
+  * 一次性渲染後端傳來的所有數據，根據數據渲染作者名稱、文章標題，以及文章概要。
   * 搜尋按鈕發送取得文章列表的請求時，要帶上 keyword 這個 query 參數
- 
+
 * 文章列表改為使用無線下滑機制，每次向後端索取 N 篇文章，再動態渲染文章列表。
   
-* 取得文章分類列表，並存入 Cookie
+* 串接文章分類列表 API，並將文章分類列表存入 Cookie
 
 ### 導入用戶機制後
 
@@ -33,21 +36,22 @@
 * 新增畫面，增加文章分類欄位，於作者名稱下方置中呈現
 
 * 新增畫面，文章下方是留言區
+   * 留言區左上為用戶頭像，頭像右方為用戶名稱，先使用寫死的數據。
+   * 取消按鈕和按留言按鈕並列，位於留言區的右下方。
    * 點擊到留言區時，留言區高度會略為放大，點到其他地方、按取消按鈕或是按留言按鈕，則會恢復原始大小。
    * 留言區當中有文字時，按取消按鈕或是按留言按鈕後，文字會清空。
-   * 取消按鈕和按留言按鈕並列，位於留言區的右下方。
-   * API 使用用戶名稱或 ID 來區分留言者，JS 自行設置參數，用戶毋需填寫
-   * 留言區左上的用戶頭像先使用寫死的數據
 
 * 新增畫面，留言區下方是歷史留言區
    * 後端傳來的數據應該按照時間做排序，因此前端無須再做排序
    * 越上方會是越新的留言，最新的留言會被加到最上面
    * 若有多則歷史留言，一次性渲染全部
-   * 歷史留言區的每則留言的格式與留言區類似，包含用戶名稱、用戶頭像和留言的內文。
+   * 歷史留言區的每則留言的格式與留言區類似，包含用戶頭像、用戶名稱和留言的內文。
  
-* 新增留言 API，在歷史留言區的畫面完成後，取得 API 回應值後，將最新留言渲染到歷史留言區。
- 
-* 若有多則歷史留言，則會每次向後端索取 N 則留言，這些留言的最下方再提供"更多留言"的按鈕，按下後再索取 N 則留言，若沒有更多留言了，則"更多留言"的按鈕隱藏。
+* 串接留言 API
+  * 留言 API 和取得歷史留言 API
+  * 在歷史留言區的畫面完成後，取得 API 回應值後，將最新留言渲染到歷史留言區。
+  * 若有多則歷史留言，則會每次向後端索取 N 則留言，這些留言的最下方再提供"更多留言"的按鈕，按下後再索取 N 則留言，若沒有更多留言了，則"更多留言"的按鈕隱藏。
+  * 用戶頭像先使用寫死的數據。
 
 ### 導入用戶機制後
 
