--- a/docs/各頁面任務說明.md
+++ b/docs/各頁面任務說明.md
@@ -72,9 +72,13 @@
 * 建立畫面，說明文字和文字輸入框搭配，渲染當前文章的標題、作者名稱和內文。
     * 標題為單行文字；內文為多行文字。
     * 作者名稱不可修改。
-    * 右下方為取消按鈕和更新按鈕，取消按鈕按下後，標題和內文重置為原本的內容。
-    * 更新按鈕按下後，檢查是否有被修改，且更新後的內容不可為空，如果有則送出請求。
-    * 沒有更新或是請求獲得回應後，跳轉到單篇文章頁。
+    * 右下方為取消按鈕和更新按鈕，取消按鈕按下後，跳轉回到單篇文章頁。
+    * 更新按鈕按下後，檢查是否有被修改，且更新後的內容不可為空，如果有則透過 console.log 印出請求。
+    * 沒有更新，跳轉回到單篇文章頁。
+
+* 串接編輯文章 API
+  * 更新按鈕按下後，檢查是否有被修改，且更新後的內容不可為空，如果有則送出請求。
+  * 請求獲得回應後，跳轉到單篇文章頁。
 
 * 新增畫面，使用下拉選單選擇文章分類
   * API 中帶入文章分類參數
@@ -94,7 +98,10 @@
    * 內文為多行文字輸入框。
    * 右下為取消和新增
    * 取消紐按下後，返回文章列表頁
-   * 新增紐按下後，送出新增 API
+   * 新增紐按下後，透過 console.log 印出請求。
+
+* 串接新增文章 API
+  * 新增紐按下後，送出新增 API
 
 * 新增畫面，使用下拉選單選擇文章分類
   * API 中帶入文章分類參數
@@ -120,24 +127,34 @@
 
 * 建立畫面，向後端請求登入，並獲取驗證身分用的 JWT
    * 輸入框: email, password，其中所有欄位不可為空
-   * 點擊登入按鈕才會送出請求
    * 登入按鈕下方會有超連結，給還沒有帳號的人跳往 Register 頁面
-   * 將 JWT 存入 Cookie
-   * 從 JWT 中讀取用戶資訊，並存入 Cookie
+ 
+* 串接 API
+   * 點擊登入按鈕才會送出登入 API
+   * 將返回值的 JWT 和 JWT 當中的用戶資訊存入 Cookie
+   * 成功登入，則跳轉到文章列表頁
+   * 登入失敗則呈現錯誤訊息
 
 ## Profile
 
 * 建立畫面，呈現用戶 ID、名稱、email 和用戶頭像。
    * 名稱可編輯，使用 input 標籤呈現；用戶頭像可上傳新圖片。
    * 右下方為取消按鈕和更新按鈕，取消按鈕按下後，email 和用戶頭像重置為原本的內容。
-   * 更新按鈕按下後，檢查是否有被修改，如果有則送出請求，沒有的話則不送出請求。
+   * 更新按鈕按下後，檢查是否有被修改，如果有則透過 console.log 印出請求，沒有的話則印出"內容未被修改"。
    * 更新後的內容不可為空。
+ 
+* 串接更新用戶資訊 API
+  * Header 中帶入 JWT
+  * 更新按鈕按下後，檢查是否有被修改，如果有則送出請求
 
 ## Users
 
 * 建立畫面，呈現除了當前用戶以外的所有用戶，使用無線下滑機制，每次取得 N 名用戶的數據，再動態渲染進去。
    * 左邊呈現用戶頭像和名稱，右邊則為追隨按鈕，切換追隨狀態。
    * 已追隨的用戶和未追隨的用戶的按鈕文字和顏色上要做出差異。
+   * 用戶列表上方為用戶搜尋欄，根據用戶名稱對用戶列表做篩選。
+ 
+* 串接用戶列表和用戶搜尋的 API
 
 ## 其他
 
